Fri Mar 17 15:50:00 UTC 2006  simon massey  <sma@prismtech.com>

        * tests/run_test.lst
          Add more !DISABLE_ToFix_LynxOS_* marks to failing tests

Fri Mar 17 13:38:18 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciaocidldefaults.mpb:
        
          New file, containing cidl-related stuff removed from
          ciao_servant_dnc.mpb, which now inherits from the new
          base project. These changes allow CIAO applications
          to set up the build either in the existing way, where
          the servant build executes the CIDL compiler, then the
          IDL compiler on the resulting *E.idl file, then the
          C++ compiler on all the results, or to have separate
          builds for CIDL files (which executes first), then
          IDL files, then generated and hand-written C++ files.
          
        * bin/MakeProjectCreator/config/ciao_servant_dnc.mpb:
        
          Changes described in the item above.

Fri Mar 17 13:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/TP_Reactor.cpp:
          Fixed variable not used warning

Fri Mar 17 08:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/TP_Reactor.{h,cpp,inl}:
          Fixed bugzilla #2395. This was about a race condition in the
          TP_Reactor, when the handle_x method returns -1 the handler
          is removed and after that we try to resume. Normally this resume
          is a noop because for the handle there is no event handler anymore.
          But to resume the handle we need to reacquire the lock on the
          reactor, in the time between the remove and the reacquire we could
          have received a new connection for which the handle is used which
          we already freed and then we can resume this handle but then for
          a new eventhandler. The fix is to do the remove and resume as atomic